Minor type changes/Fix contrast
Bug: 61411

--- a/resources/ext.popups.core.less
+++ b/resources/ext.popups.core.less
@@ -28,17 +28,18 @@
 			padding: 16px;
 			padding-bottom: 48px;
 
-			h3 {
-				margin-top: 0;
-				padding: 0;
-				font-family: Georgia, Times, serif;
-				font-style: normal;
-			}
-
 			> div.mwe-popups-redirect {
-				color: #c9c9c9;
-				font-style: italic;
+				color: #555;
+				font-size: 0.85em;
 				margin-bottom: 3px;
+
+				h3 {
+					margin-top: 0;
+					padding: 0;
+					font: 2em Georgia, Times, serif;
+					font-weight: normal;
+					font-style: normal;
+				}
 			}
 		}
 
